--- a/github-markdown.css
+++ b/github-markdown.css
@@ -1,4 +1,4 @@
-media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
   .markdown-body {
     color-scheme: dark;
     --color-prettylights-syntax-comment: #8b949e;
