--- a/github-markdown.css
+++ b/github-markdown.css
@@ -2,8 +2,8 @@
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   margin: 0;
-  color: #24292f;
-  background-color: #ffffff;
+  color: #000000;
+  background-color: #0B2647;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
   font-size: 16px;
   line-height: 1.5;
@@ -104,7 +104,7 @@
   border-style: none;
   max-width: 100%;
   box-sizing: content-box;
-  background-color: #ffffff;
+  background-color: #0B2647;
 }
 
 .markdown-body code,
@@ -652,7 +652,7 @@
 }
 
 .markdown-body table tr {
-  background-color: #ffffff;
+  background-color: #0B2647;
   border-top: 1px solid hsla(210,18%,87%,1);
 }
 
@@ -842,7 +842,7 @@
 .markdown-body .csv-data .blob-num {
   padding: 10px 8px 9px;
   text-align: right;
-  background: #ffffff;
+  background: #0B2647;
   border: 0;
 }
 
